Make shader effects visible even if source is initially empty

Task-number: QTBUG-21343

Change-Id: Iaa34d74d2458f0a9dc94c96ee13d3406e1d8f1cb
Reviewed-by: Kim M. Kalland <kim.kalland@nokia.com>